--- a/images/tasks/templates/consul.service
+++ b/images/tasks/templates/consul.service
@@ -1,20 +1,21 @@
 [Unit]
-Description=Nomad
-Documentation=https://nomadproject.io/docs/
+Description=Consul
+Documentation=https://consul.io/docs/
 StartLimitIntervalSec=10
 Wants=network-online.target
-After=network-online.target cloud-final.service
+After=set-ip.service
 
 [Service]
 KillMode=process
 KillSignal=SIGINT
-ExecStart=/usr/bin/nomad agent -config /etc/nomad.hcl
+ExecStart=/usr/bin/consul agent -config-file=/etc/consul.hcl
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 RestartSec=2
 StartLimitBurst=3
 LimitNOFILE=65536
-User=nomad
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+User=consul
 
 [Install]
-WantedBy=cloud-init.target
+WantedBy=multi-user.target
