Enable datadog non-local apm (#4)

--- a/images/city/templates/datadog.j2.yaml
+++ b/images/city/templates/datadog.j2.yaml
@@ -31,4 +31,8 @@ logs_config:
   container_collect_all: false
 
 process_config:
-  enabled: "true"
+  enabled: true
+
+apm_config:
+  enabled: true
+  apm_non_local_traffic: true
