--- a/images/roles/amazon/templates/ssh-import-id.service
+++ b/images/roles/amazon/templates/ssh-import-id.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Import SSH Keys
-After=network.target consul.service
+Wants=consul.service
+After=network.target consul.service cloud-init.service
 
 [Service]
 Type=oneshot
