--- a/images/dmz/roles/provisioner/tasks/nomad.yml
+++ b/images/dmz/roles/provisioner/tasks/nomad.yml
@@ -5,9 +5,13 @@
   when: "'nomad-policy' not in policy_list"
   block:
     - name: Write Nomad Policy to vault
-      command: "vault policy write nomad-policy {{role_path}}/templates/nomad-policy.hcl"
+      command: "vault policy write nomad-server {{role_path}}/templates/nomad-server.hcl"
 
-    - name: Write Token Role to Vault
+    - name: Write Cluster Token Role to Vault
       command: "vault write /auth/token/roles/nomad-cluster @{{role_path}}/templates/nomad-cluster-role.json"
+
+    - name: Write Server Token Role to Vault
+      command: "vault write /auth/token/roles/nomad-server @{{role_path}}/templates/nomad-server-role.json"
+
 
 
