--- a/images/dmz/roles/vault-openvpn/templates/server.j2.conf
+++ b/images/dmz/roles/vault-openvpn/templates/server.j2.conf
@@ -7,7 +7,7 @@ proto udp
 dev tun
 keepalive 10 120
 comp-lzo
-local 0.0.0.0
+local <LOCAL_IPV4>
 
 # push multiple domains
 push "route {{vpc_active_subnet}} 255.255.0.0"
@@ -15,7 +15,7 @@ push "route {{vpc_active_subnet}} 255.255.0.0"
 # This tells the client to use these internal name servers when on the VPN
 push "dhcp-option DOMAIN-SEARCH node.city.consul"
 push "dhcp-option DOMAIN-SEARCH service.city.consul"
-push "dhcp-option DNS 0.0.0.0"
+push "dhcp-option DNS <LOCAL_IPV4>"
 
 # avoid accessing certain resources on restart
 persist-key
