--- a/images/roles/amazon/templates/set-ssh-keys.sh.template
+++ b/images/roles/amazon/templates/set-ssh-keys.sh.template
@@ -2,8 +2,14 @@
 
 echo "Fetching SSH Import Ids"
 
+if ! [ -f /etc/ssh/import_keys ]; then
+  echo "SSH key file not present"
+  exit 1
+fi
+
 while IFS='' read -r line || [[ -n "$line" ]]; do
-  ssh-import-id $line
+  echo "Getting key for $line"
+  ssh-import-id -o /home/alan/.ssh/authorized_keys $line
 done < /etc/ssh/import_keys
 
 exit 0
