--- a/images/roles/amazon/templates/ssh-import-id.service
+++ b/images/roles/amazon/templates/ssh-import-id.service
@@ -7,6 +7,7 @@ After=network.target consul.service cloud-init.service
 Type=oneshot
 ExecStart=/usr/bin/set-ssh-keys.sh
 StandardOutput=journal
+User=alan
 
 [Install]
 WantedBy=multi-user.target
