--- a/images/lb/roles/fabio/templates/fabio.j2.conf
+++ b/images/lb/roles/fabio/templates/fabio.j2.conf
@@ -1,4 +1,6 @@
 
 # Listen on 80 and 443 for now
 
-proxy.addr = :80;proto=http,:443;proto=tcp+sni
+
+proxy.cs = cs=city-certs;type=vault;cert=secret/fabio/certs
+proxy.addr = :80;proto=http,:443;proto=https;cs=city-certs
