Push Button Environments (#15)
* Internet Gateway and Instance env tags

* Blue/ Green Adjustments

* Bootstrap adjustment

* Remove comp-lza from openvpn

--- a/aws/cloud-init/city_host.yml
+++ b/aws/cloud-init/city_host.yml
@@ -17,3 +17,6 @@ write_files:
       gh:luongthomas
 
 hostname: ${hostname}
+
+bootcmd:
+  - 'sed -i "s/bootstrap_expect.*/bootstrap_expect = ${city_hosts}/" /etc/consul.hcl'
