Cleanup Vault Provisioning a bit

--- a/aws/bootstrap/roles/provisioner/tasks/infra_secrets.yml
+++ b/aws/bootstrap/roles/provisioner/tasks/infra_secrets.yml
@@ -4,5 +4,16 @@
     VAULT_TOKEN: "{{ vault_token }}"
   when: "'infra' not in secrets_list"
   block:
+    - name: Generate a json file full of secrets
+      template:
+        src: templates/infra_secrets.j2.json
+        dest: /root/infra_secrets.json
+        owner: root
+
     - name: Put DD Api Key
-      command: "vault kv put secret/infra dd_api_key={{ vaulted_dd_api_key }} docker_bot_pass={{ vaulted_docker_bot_pass }} env={{ env }} cluster_size={{ cluster_size }}"
+      command: "vault kv put secret/infra @/root/infra_secrets.json"
+
+    - name: Remove the file
+      file:
+        path: /root/infra_secrets.json
+        state: absent
